# redeye_gateway_test

./: .env.example  .gitignore  README.md  dev.bat  docker-compose.yml
.github/workflows/: ci.yml
docs/: PROJECT_STRUCTURE.md
docs/guides/: INTEGRATION_TESTING.md  PRODUCTION_DEPLOYMENT.md  QUICKSTART.md
docs/reports/: ERROR_DISPLAY_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  OPTIMIZATION_SUMMARY.md
infra/postgres/: init.sql
redeye_auth/: Dockerfile
redeye_auth/migrations/: 20260320000000_init_auth.sql  20260320000001_add_admin_audit_logs.sql  20260320000002_expand_llm_route_provider_check.sql  20260320000003_add_user_roles.sql
redeye_auth/src/: main.rs
redeye_auth/src/api/: handlers.rs  router.rs
redeye_auth/src/infrastructure/: security.rs
redeye_cache/: Cargo.toml
redeye_dashboard/: package-lock.json  package.json  vite.config.ts
redeye_dashboard/src/: App.tsx
redeye_dashboard/src/data/services/: authService.ts
redeye_gateway/: Cargo.toml  Dockerfile
redeye_gateway/src/: main.rs
redeye_gateway/src/api/: handlers.rs  routes.rs
redeye_gateway/src/config/: mod.rs
redeye_gateway/src/domain/: mod.rs  models.rs  provider.rs  routing.rs
redeye_gateway/src/infrastructure/: anthropic_client.rs  audit_repository.rs  circuit_breaker.rs  clickhouse_logger.rs  credential_repository.rs  gemini_client.rs  mod.rs  openai_client.rs  provider_client.rs  routing_repository.rs
redeye_gateway/src/usecases/: proxy.rs  routing.rs
scripts/: ci-verify.ps1  integration-smoke.ps1  setup.sh
shared/: shared_config.rs  shared_errors.rs
(+14 files in other folders)
