[package]
name = "redeye_cache"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
axum = { version = "0.7", features = ["json"] }
redis = { version = "0.27", features = ["tokio-comp", "script"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.22.0", features = ["v4"] }
